--- a/static/stat572/pr/ch10_stat572.Rmd
+++ b/static/stat572/pr/ch10_stat572.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "Chapter 10: Nonconjugate priors and Metropolis-Hastings algorithms"
-author: ""
-date: ""
+title: 'Chapter 10: Nonconjugate priors and Metropolis-Hastings algorithms'
+author: ''
+date: ''
 output:
+  pdf_document:
+    toc: yes
   html_document:
     highlight: pygments
     toc: yes
@@ -125,7 +127,7 @@ the MH algorithm for analyzing the icecore data and distribute it across
 multiple cores with `parallel::mclapply`. That file creates `icecore_mcmc` which
 is analyzed here.
 
-```{r}
+```{r,eval=F}
 if (!file.exists('./icecore_mcmc')) {
   stop("Run icecore_parallel.R first to get MCMC data")
 }
@@ -161,14 +163,14 @@ msparrownest = read.table(url('http://www.stat.washington.edu/people/pdhoff/Book
 
 For convenience let $\theta_i = P(Y_i = 1 \mid \alpha, \beta, x_i)$. Now we solve for $\theta_i$ in our model
 
-$$
+
 \begin{align}
 & \log\left(\frac{\theta_i}{1 - \theta_i}\right) = \alpha + \beta x_i \\
 \implies& \frac{\theta_i}{1 - \theta_i} = \exp(\alpha + \beta x_i) \\
 \implies& \theta_i = \exp(\alpha + \beta x_i) - \theta_i \exp(\alpha + \beta x_i) \\
 \implies& \theta_i = \frac{\exp(a + \beta x_i)}{1 + \exp(\alpha + \beta x_i)}
 \end{align}
-$$
+
 
 So we know $Y_i \sim \text{Bernoulli}\left(p_i\right)$ where $p_i = \frac{\exp(a + \beta x_i)}{1 + \exp(a + \beta x_i)}$ and thus
 
@@ -180,7 +182,7 @@ $$
 
 Let $z_i = \exp(\alpha + \beta x_i)$ for simplicity.
 
-$$
+
 \begin{align}
 p(\boldsymbol{y} \mid \alpha, \beta, x_i) &= \prod_{i = 1}^n p(y_i \mid \alpha, \beta, x_i) \\
 &= \prod_{i = 1}^n p_i^{y_i} (1 - p_i)^{1 - y_i} \\
@@ -191,7 +193,7 @@ p(\boldsymbol{y} \mid \alpha, \beta, x_i) &= \prod_{i = 1}^n p(y_i \mid \alpha, 
 &= \prod_{i = 1}^n \frac{z_i^{y_i}}{1 + z_i} \\
 &= \prod_{i = 1}^n \frac{\exp(y_i (\alpha + \beta x_i))}{1 + \exp(\alpha + \beta x_i)} \\
 \end{align}
-$$
+
 
 and I don't think that can be simplified further.
 
@@ -224,12 +226,12 @@ the $\alpha$ prior falls in the log-odds interval $[-10, 10]$.
 
 So
 
-$$
+
 \begin{align}
 \alpha &\sim \mathcal{N}(0, 25) \\
 \beta &\sim \mathcal{N}(0, 0.25) \\
 \end{align}
-$$
+
 
 ### c
 
